--- a/.editorconfig
+++ b/.editorconfig
@@ -2,6 +2,7 @@
 root = true
 
 [*]
+indent_style = space
 indent_size = 2
 end_of_line = lf
 charset = utf-8
@@ -10,3 +11,6 @@ insert_final_newline = true
 
 [*.md]
 trim_trailing_whitespace = false
+
+[Makefile]
+indent_style = tab
