--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+.DS_Store
 node_modules
-coverage
+.temp/*
+dist
+sftp-config.json
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+server.js
+# Editor directories and files
 .idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
