--- a/package.json
+++ b/package.json
@@ -1,36 +1,33 @@
 {
-  "name": "koa-proxy",
-  "version": "0.9.0",
+  "name": "koa-cache-proxy",
+  "version": "1.0.0",
   "description": "Proxy middleware for koa",
-  "main": "index",
+  "main": "index.js",
   "dependencies": {
     "iconv-lite": "^0.2.11",
-    "co-request": "^0.2.0"
+    "lru-cache": "^4.1.3",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.5"
   },
   "keywords": [
     "koa",
     "middleware",
+    "cache",
     "proxy"
   ],
   "devDependencies": {
-    "coveralls": "~2.8.0",
-    "istanbul-harmony": "*",
-    "koa": "^0.5.2",
-    "koa-body-parser": "^1.1.2",
-    "koa-router": "^3.1.2",
-    "koa-static": "^1.4.3",
-    "mocha": "~1.17.1",
-    "should": "~3.1.3",
-    "supertest": "^0.10.0"
+    "eslint": "^5.3.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "koa": "^2.5.2"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/popomore/koa-proxy"
+    "url": "https://github.com/KittenTeam/koa-cache-proxy"
   },
-  "homepage": "https://github.com/popomore/koa-proxy",
-  "author": "popomore <sakura9515@gmail.com>",
-  "license": "MIT",
-  "scripts": {
-    "test": "make test"
-  }
+  "homepage": "https://github.com/KittenTeam/koa-cache-proxy",
+  "license": "MIT"
 }
