--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "Proxy middleware for koa",
   "main": "index.js",
+  "scripts": {
+    "lint": "eslint --fix --ext .js .",
+    "prepublishOnly": "conventional-changelog -p angular -r 2 -i CHANGELOG.md -s",
+    "release": "/bin/bash scripts/release.sh"
+  },
   "dependencies": {
     "iconv-lite": "^0.2.11",
     "lru-cache": "^4.1.3",
@@ -16,6 +21,7 @@
     "proxy"
   ],
   "devDependencies": {
+    "conventional-changelog-cli": "^2.0.5",
     "eslint": "^5.3.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.14.0",
@@ -34,6 +40,9 @@
       "eslint --fix",
       "git add"
     ]
+  },
+  "bugs": {
+    "url": "https://github.com/KittenTeam/koa-cache-proxy/issues"
   },
   "repository": {
     "type": "git",
