--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "koa-proxy",
-  "version": "0.9.0",
+  "version": "1.0.0-alpha.0",
   "description": "Proxy middleware for koa",
   "main": "index",
   "dependencies": {
