--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "supertest": "^3.0.0"
   },
   "peerDependencies": {
-    "koa": ">2"
+    "koa": "2.x"
   },
   "repository": {
     "type": "git",
