FIX: npm tarball by using files field instead of .npmignore

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5"
   },
+  "files": [
+    "index.js"
+  ],
   "keywords": [
     "koa",
     "middleware",
